--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,15 +9,20 @@
 </head>
 
 <body>
-  
+    <%- include('partials/header') -%>
     <h1>please log in</h1>
-    <form action="" method="POST">
-        <label for="username">Username</label>
-        <input name="username" placeholder="username" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <button>Log In</button>
-    </form>
+    <section class="form-container">
+        <form action="" method="POST">
+            <input name="username" placeholder="username" type="text" />
+            <input name="password" placeholder="password" type="password" />
+            <button>Log In</button>
+        </form>
+        <p>Don't have an account?
+            <a href="/sign-up">
+                <button>Sign Up</button>
+            </a>
+        </p>
+    </section>
   
 </body>
 
