--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -9,14 +9,20 @@
 </head>
 
 <body>
+    <%- include('partials/header') -%>
     <h1>Sign up</h1>
-    <form action="" method="POST">
-        <label for="username">Username</label>
-        <input name="username" placeholder="username" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <button>Sign up</button>
-    </form>
+    <section class="form-container">
+        <form action="" method="POST">
+            <input name="username" placeholder="username" type="text" />
+            <input name="password" placeholder="password" type="password" />
+            <button>Sign up</button>
+        </form>
+        <p>Already have an account? 
+            <a href="/login">
+                <button>Login</button>
+            </a>
+        </p>
+    </section>
 </body>
 
 </html>
