--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,150 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  height: 100%;
+}
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  min-height: 100%;
 }
 
 a {
-  color: #00B7FF;
+  color: #276e8a;
+}
+
+.main-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  background-color: #cee3f8;
+  color: #369;
+  font-weight: bold;
+  height: 50px;
+  padding: 0 20px;
+  border-bottom: 1px solid #5f99cf;
+}
+
+.main-header__nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.main-header a {
+  color: #369;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.main-header__list {
+  width: 100%;
+  display: flex;
+  list-style: none;
+}
+
+.main-header__home {
+  margin-right: auto;
+}
+
+.main-header li {
+  padding: 0 10px;
+}
+
+main {
+  padding: 15px;
+}
+
+section {
+  margin-bottom: 20px;
+}
+
+.become-member {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.create-message-link {
+  text-align: center;
+  border: 1px solid #c4dbf1;
+  color: #369;
+  font-size: 120%;
+  font-weight: bold;
+  letter-spacing: -1px;
+  line-height: 29px;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+.messages {
+  margin-top: 10px;
+  border-left: 1px solid #ccc;
+}
+.message {
+  margin: 0 0 5px 10px;
+  background-color: #fafafa;
+  border: 1px solid #ddd;
+  padding: 2px 2px 2px 10px;
+}
+
+.message-title {
+  font-weight: normal;
+  color: #0000ff;
+}
+
+.message-timestamp {
+  color: #888;
+  font-size: x-small;
+}
+
+h1 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 10px;
+  text-align: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  border: 1px solid #ccc;
+  background: #fff;
+  padding: 5px 10px;
+  font: inherit;
+  color: #276e8a;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+input {
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  font: inherit;
+  color: #111111;
+  margin: 10px;
 }
