--- a/views/become-member.ejs
+++ b/views/become-member.ejs
@@ -10,13 +10,15 @@
 
 <body>
     <%- include('partials/header') -%>
-    <div>
-        <form method="post" action="">
-            <h1>Enter your member code</h1>
-            <input name="member_code" placeholder="Enter member code" type="password" required="true" maxlength="100" />
-            <button>Submit</button>
-        </form>
-    </div>
+    <main class="become-member">
+        <h1>Enter your member code</h1>
+        <section class="form-container">
+            <form method="post" action="" class="become-member-form">
+                <input name="member_code" placeholder="Enter member code" type="password" required="true" maxlength="100" />
+                <button>Submit</button>
+            </form>
+        </section>
+    </main>
 </body>
 
 </html>
