--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,20 +10,17 @@
 
 <body>
     <%- include('partials/header') -%>
-    <h1>please log in</h1>
-    <section class="form-container">
-        <form action="" method="POST">
-            <input name="username" placeholder="username" type="text" />
-            <input name="password" placeholder="password" type="password" />
-            <button>Log In</button>
-        </form>
-        <p>Don't have an account?
-            <a href="/sign-up">
-                <button>Sign Up</button>
-            </a>
-        </p>
-    </section>
-  
+    <main class="log-in">
+        <h1>Log in</h1>
+        <section class="form-container">
+            <form action="" method="POST" class="login-form">
+                <input name="username" placeholder="username" type="text" />
+                <input name="password" placeholder="password" type="password" />
+                <button>Log In</button>
+            </form>
+            <p>Don't have an account?<a href="/sign-up"><button>Sign Up</button></a></p>
+        </section>
+    </main>
 </body>
 
 </html>
