--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -6,6 +6,7 @@
         <%= title %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
 <body>
@@ -28,6 +29,7 @@
             <form action="" method="POST" class="signup-form">
                 <input name="username" placeholder="username" type="text" />
                 <input name="password" placeholder="password" type="password" />
+                <input name="confirmPassword" placeholder="confirm password" type="password" />
                 <button>Sign up</button>
             </form>
             <p>Already have an account? 
