--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,9 +17,10 @@
             <form action="" method="POST" class="login-form">
                 <input name="username" placeholder="username" type="text" />
                 <input name="password" placeholder="password" type="password" />
-                <button>Log In</button>
+                <button>Log in</button>
             </form>
             <p>Don't have an account?<a href="/sign-up"><button>Sign Up</button></a></p>
+            <p>Log in as a test user<a href="/test-login"><button>Log in</button></a></p>
         </section>
     </main>
 </body>
