--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -6,6 +6,8 @@
         <%= title %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
@@ -16,7 +18,7 @@
         <h1>Sign up</h1>
         <% if (errors) {%> 
         <div class="errors">
-            <ul class="errors">
+            <ul>
             <% errors.forEach((error)=> {%>
                 <li>
                     <%= error.msg %>
