--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,8 @@
         <%= title %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name='viewport' content='width=device-width, initial-scale=1' />
 </head>
 
@@ -13,6 +15,17 @@
     <%- include('partials/header') -%>
     <main class="log-in">
         <h1>Log in</h1>
+        <% if (errors) {%>
+            <div class="errors">
+                <ul>
+                    <% errors.forEach((error)=> {%>
+                        <li>
+                            <%= error.msg %>
+                        </li>
+                    <%}) %>
+                </ul>
+            </div>
+        <%}%>
         <section class="form-container">
             <form action="" method="POST" class="login-form">
                 <input name="username" placeholder="username" type="text" />
