--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,6 +100,10 @@ section {
   padding: 2px 2px 2px 10px;
 }
 
+.message-content {
+  white-space: pre-wrap;
+}
+
 .message-title {
   font-weight: normal;
   color: #0000ff;
