--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         %>
         <% if (currentUser.admin) {%>
           <section class="admin-view">
-            <p>Hello Admin. Please delete inapropriate messages</p>
+            <p>Hello Admin. Please delete inappropriate messages</p>
           </section>
           <%} %>
         <section class="create-message">
